tests/neg/i9344.scala
import language.postfixOps
object Test {
  val I1: Int = 0 * * * 8 * 1 - 1 + 1 + // error
}
